--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -6,11 +6,11 @@
     padding: 30px;
     border-radius: 6px;
     margin-bottom: 20px;
-    border: 2px solid grey;
-    box-shadow: 1px 2px 2px 1px;
 }
 
 .btn {
-    color: rgb(74, 74, 69);
-    background-color: rgb(200, 214, 4);
+    color: rgb(255, 255, 255);
+    background-color: #1a0000;
+    padding: 8px;
+    border-radius: 6px;
 }
