--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -21,8 +21,6 @@ label {
     height: 30px;
     border: 1px solid gray;
     border-radius: 6px;
-    border: 2px solid grey;
-    box-shadow: 1px 2px 2px 1px;
 }
 
 .error {
@@ -32,7 +30,8 @@ label {
 .btn {
     width: fit-content;
     margin: auto;
-    color: rgb(74, 74, 69);
-    background-color: rgb(200, 214, 4);
-    ;
+    color: rgb(255, 255, 255);
+    background-color: #1a0000;
+    padding: 8px;
+    border-radius: 6px;
 }
