--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -10,14 +10,12 @@
     padding: 30px;
     border-radius: 6px;
     text-align: center;
-    border: 2px solid grey;
-    box-shadow: 1px 2px 2px 1px;
 }
 
 .input {
     text-align: start;
     margin-bottom: 12px;
     height: 30px;
-    border: 1px solid rgb(238, 235, 235);
+    border: 1px solid gray;
     border-radius: 6px;
 }
