--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
-    background-color: #1a0000;
+    background-color: #5ea4e6;
     border-radius: 6px;
 }
 
