--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -16,6 +16,6 @@
     text-align: start;
     margin-bottom: 12px;
     height: 30px;
-    border: 1px solid gray;
+    border: 1px solid rgb(27, 2, 95);
     border-radius: 6px;
 }
