--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,13 +1,17 @@
-.ul {
-    margin: 0 auto;
-    padding: 0;
+.list {
     display: flex;
+    gap: 20px;
     flex-wrap: wrap;
-    gap: 12px;
-    justify-content: center;
-    list-style: none;
+    margin: 50px;
 }
 
-.list {
-    margin: auto;
+.title {
+    margin: 20px 50px;
+}
+
+.text {
+    font-size: 36px;
+    text-align: center;
+    color: white;
+    margin-top: 50px;
 }
