--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,7 +1,6 @@
-.not_found {
+.loader {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
-    flex-direction: column;
+    margin: 30px 0;
 }
