--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -4,12 +4,12 @@
     gap: 20px;
     justify-content: center;
     align-items: center;
-    margin: 20px 50px;
+    margin: 50px auto;
     padding: 20px;
     border: 2px solid #242424;
     border-radius: 5%;
     background: white;
-    width: 200px;
+    width: 280px;
 }
 
 label {
@@ -30,6 +30,10 @@ label {
     font-size: 12px;
 }
 
+::placeholder {
+    padding: 5px;
+}
+
 .btn {
     padding: 10px 30px;
     font-size: 18px;
@@ -41,4 +45,12 @@ label {
 .btn:hover {
     background-color: rgb(73, 70, 70);
     color: white;
+}
+
+.text {
+    color: rgba(255, 0, 0, 0.54);
+}
+
+p {
+    text-align: center;
 }
