--- a/src/pages/Registration/Registration.module.css
+++ b/src/pages/Registration/Registration.module.css
@@ -4,12 +4,12 @@
     gap: 20px;
     justify-content: center;
     align-items: center;
-    margin: 20px 50px;
+    margin: 50px auto;
     padding: 20px;
     border: 2px solid #242424;
     border-radius: 5%;
     background: white;
-    width: 200px;
+    width: 280px;
 }
 
 label {
@@ -28,6 +28,12 @@ label {
 .red {
     color: rgb(178, 3, 3);
     font-size: 12px;
+}
+
+.text {
+    font-size: 24px;
+    text-align: center;
+    color: rgba(255, 0, 0, 0.57);
 }
 
 .btn {
