--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -5,13 +5,13 @@
     gap: 20px;
     margin: 0 50px;
     padding: 10px 20px;
-    border: 2px solid #242424;
+    border: 2px solid #77d289;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     border-top: none;
-    background-color: white;
+    background-color: rgb(77, 215, 125);
     margin-bottom: 20px;
-    color: black;
+    color: rgb(5, 29, 4);
     font-size: 20px;
     font-weight: 500;
 }
