--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -8,7 +8,7 @@
     padding: 20px;
     border: 2px solid #242424;
     border-radius: 5%;
-    background: white;
+    background: none;
     width: 200px;
 }
 
@@ -40,5 +40,5 @@ label {
 
 .btn:hover {
     background-color: rgb(73, 70, 70);
-    color: white;
+    color: rgb(236, 231, 231);
 }
