--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -5,12 +5,12 @@
     align-items: center;
     margin: auto;
     padding: 20px;
-    background: white;
+    background: rgb(252, 251, 251);
     border: 2px solid #242424;
     border-radius: 15px;
     width: 300px;
     background-color: transparent;
-    color: white;
+    color: rgb(16, 1, 1);
 }
 
 h2 {
@@ -20,8 +20,8 @@ h2 {
 
 .input {
     padding: 10px 45px;
-    background-color: transparent;
-    color: white;
+    background-color: rgb(249, 244, 244);
+    color: rgb(14, 3, 3);
     outline: none;
 }
 
@@ -34,5 +34,5 @@ h2 {
 }
 
 ::placeholder {
-    color: white;
+    color: rgb(67, 50, 50);
 }
